--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory           = ./inventory
 host_key_checking   = False
-ansible_ssh_user    = vagrant
-
+roles_path          = ./roles
+deprecation_warnings= False
