--- a/roles/mariadb_install/tasks/main.yml
+++ b/roles/mariadb_install/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: include distribution specific vars
-  include_vars: "{{ ansible_distribution }}.yml"
+# - name: include distribution specific vars
+#   include_vars: "{{ ansible_distribution }}.yml"
     
 - name: include distribution specific install
   include: "{{ ansible_distribution }}.yml"
