--- a/roles/mariadb_install/vars/main.yml
+++ b/roles/mariadb_install/vars/main.yml
@@ -1,3 +1,2 @@
 ---
-mariadb_version: 10.3
-mariadb_key: 177F4010FE56CA3336300305F1656F24C74CD1D8
+cluster_ips: 192.168.121.235,192.168.121.153,192.168.121.154
