--- a/roles/mariadb_install/tasks/secure_installation.yml
+++ b/roles/mariadb_install/tasks/secure_installation.yml
@@ -1,12 +1,12 @@
 ---
-- name: Ensure default user is present.
+- name: Ensure default user is present
   mysql_user:
-    name: "{{ mysql_user_name }}"
+    name: "{{ mysql_user_username }}"
     host: 'localhost'
     password: "{{ mysql_user_password }}"
     priv: '*.*:ALL,GRANT'
     state: present
-  when: mysql_user_name != mysql_root_username
+  when: mysql_user_username != mysql_root_username
 
 - name: Disallow root login remotely
   command: 'mysql -NBe "{{ item }}"'
@@ -14,21 +14,46 @@
   - DELETE FROM mysql.user WHERE User='{{ mysql_root_username }}' AND Host NOT IN ('localhost', '127.0.0.1', '::1')
   changed_when: false
 
-# - name: copy .my.cnf file with root password credentials
-#   template: src=templates/.my.cnf dest=/root/.my.cnf owner=root mode=0600
+- name: Remove MySQL test database.
+  mysql_db:
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
+    login_unix_socket: "{{ mysql_socket }}"
+    name: test
+    state: absent
 
-- name: update mysql root password for all root accounts
-  mysql_user: name=root host={{ item }} password={{ root_db_password }}
-  with_items:
-    - "{{ ansible_hostname }}"
-    - 127.0.0.1
-    - ::1
+- name: Check if root password is set
+  shell: >
+    mysqladmin -u root status
+  changed_when: false
+  failed_when: false
+  register: root_pwd_check
 
-- name: ensure anonymous users are not in the database
-  mysql_user: name='' host={{ item }} state=absent
+- name: Set MariaDB root password for localhost, 127.0.0.1, and ::1
+  mysql_user:
+    name: root
+    password: "{{ mysql_root_password }}"
+    host: "{{ item }}"
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
+    login_unix_socket: "{{ mysql_socket }}"
+    state: present
   with_items:
     - localhost
-    - "{{ inventory_hostname }}"
+    - 127.0.0.1
+    - ::1
+  when: root_pwd_check.rc == 0
 
-- name: Remove MySQL test database.
-  mysql_db: "name='test' state=absent"
+# https://github.com/geerlingguy/ansible-role-mysql/blob/master/tasks/secure-installation.yml
+- name: Get list of hosts for the anonymous user.
+  command: mysql -NBe 'SELECT Host FROM mysql.user WHERE User = ""'
+  register: mysql_anonymous_hosts
+  changed_when: false
+  check_mode: false
+
+- name: Remove anonymous MySQL users.
+  mysql_user:
+    name: ""
+    host: "{{ item }}"
+    state: absent
+  with_items: "{{ mysql_anonymous_hosts.stdout_lines|default([]) }}"
