--- a/playbooks/mariadb.yml
+++ b/playbooks/mariadb.yml
@@ -3,4 +3,10 @@
   become: yes
   roles:
   - mariadb_install
+
+- hosts: mariadb_cluster
+  become: yes
+  roles:
+  - bootstrap_mariadb_galera_master
+  
     
