Need to get all hosts in a list

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,6 @@ inventory           = inventory
 host_key_checking   = False
 roles_path          = ./roles
 deprecation_warnings= False
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = ~/.ansible/cache
