--- a/roles/bootstrap_mariadb_galera_master/tasks/main.yml
+++ b/roles/bootstrap_mariadb_galera_master/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Copy file with owner and permissions
+- name: Copy config to all nodes
   template:
     src: mariadb.cnf.j2
     dest: /etc/mysql/mariadb.cnf
@@ -9,3 +9,7 @@
   delegate_to: node-01
   shell: >
     galera_new_cluster
+
+- name: Restart the other MariaDB Galera cluster nodes
+  service: name=mariadb state=restarted
+  when: inventory_hostname != groups['mariadb_cluster'][0]
