--- a/playbooks/mariadb.yml
+++ b/playbooks/mariadb.yml
@@ -1,11 +1,16 @@
 ---
-- hosts: mariadb_cluster
-  become: yes
-  roles:
-  - mariadb_install
+# - hosts: mariadb_cluster
+#   become: yes
+#   roles:
+#   - mariadb_install
+
+- hosts: all
+  tasks:
+    - debug: var=
 
 - hosts: mariadb_cluster
   become: yes
+  gather_facts: True
   roles:
   - bootstrap_mariadb_galera_master
   
