need to bootstrap cluster

--- a/roles/bootstrap_mariadb_galera_master/handlers/main.yml
+++ b/roles/bootstrap_mariadb_galera_master/handlers/main.yml
@@ -3,4 +3,14 @@
   service:
     name: mariadb
     state: restarted
+
+- name: stop mariadb
+  service:
+    name: mariadb
+    state: stopped
+  
+- name: start mariadb
+  service:
+    name: mariadb
+    state: started
   
