--- a/roles/bootstrap_mariadb_galera_master/tasks/main.yml
+++ b/roles/bootstrap_mariadb_galera_master/tasks/main.yml
@@ -6,8 +6,8 @@
 
 - name: Copy config to all nodes
   template:
-    src: mariadb.cnf.j2
-    dest: /etc/mysql/mariadb.cnf
+    src: 50-server.cnf.j2
+    dest: /etc/mysql/mariadb.conf.d/50-server.cnf
 
 # - name: Start Galera cluster
 #   shell: >
