--- a/roles/mariadb_install/tasks/secure_installation.yml
+++ b/roles/mariadb_install/tasks/secure_installation.yml
@@ -45,15 +45,15 @@
   when: root_pwd_check.rc == 0
 
 # https://github.com/geerlingguy/ansible-role-mysql/blob/master/tasks/secure-installation.yml
-- name: Get list of hosts for the anonymous user.
-  command: mysql -NBe 'SELECT Host FROM mysql.user WHERE User = ""'
-  register: mysql_anonymous_hosts
-  changed_when: false
-  check_mode: false
+# - name: Get list of hosts for the anonymous user.
+#   command: mysql -NBe 'SELECT Host FROM mysql.user WHERE User = ""'
+#   register: mysql_anonymous_hosts
+#   changed_when: false
+#   check_mode: false
 
-- name: Remove anonymous MySQL users.
-  mysql_user:
-    name: ""
-    host: "{{ item }}"
-    state: absent
-  with_items: "{{ mysql_anonymous_hosts.stdout_lines|default([]) }}"
+# - name: Remove anonymous MySQL users.
+#   mysql_user:
+#     name: ""
+#     host: "{{ item }}"
+#     state: absent
+#   with_items: "{{ mysql_anonymous_hosts.stdout_lines|default([]) }}"
