works on 1 node with wsrep_cluster_add=gcomm://

--- a/playbooks/mariadb.yml
+++ b/playbooks/mariadb.yml
@@ -1,8 +1,8 @@
 ---
-- hosts: mariadb_cluster
-  become: yes
-  roles:
-  - mariadb_install
+# - hosts: mariadb_cluster
+#   become: yes
+#   roles:
+#   - mariadb_install
 
 - hosts: mariadb_cluster
   become: yes
