--- a/roles/bootstrap_mariadb_galera_master/tasks/main.yml
+++ b/roles/bootstrap_mariadb_galera_master/tasks/main.yml
@@ -1,19 +1,18 @@
 ---
-
-# - name: Stop the other MariaDB Galera cluster nodes
-#   service: name=mariadb state=stopped
-#   when: inventory_hostname == groups['mariadb_cluster'][0]
-
 - name: Copy config to all nodes
   template:
     src: 50-server.cnf.j2
     dest: /etc/mysql/my.cnf
 
-# - name: Start Galera cluster
-#   shell: >
-#     galera_new_cluster
-#   when: inventory_hostname == groups['mariadb_cluster'][0]
+- name: Stop master node
+  service: name=mariadb state=stopped
+  when: inventory_hostname == groups['mariadb_cluster'][0]
 
-# # - name: Start the other MariaDB Galera cluster nodes
-# #   service: name=mariadb state=started
-# #   when: inventory_hostname != groups['mariadb_cluster'][0]
+- name: Start Galera cluster
+  shell: >
+    galera_new_cluster
+  when: inventory_hostname == groups['mariadb_cluster'][0]
+
+- name: Start the other MariaDB Galera cluster nodes
+  service: name=mariadb state=restarted
+  when: inventory_hostname != groups['mariadb_cluster'][0]
