--- a/roles/mariadb_install/tasks/secure_installation.yml
+++ b/roles/mariadb_install/tasks/secure_installation.yml
@@ -32,7 +32,7 @@
   mysql_db:
     login_user: root
     login_password: "{{ mysql_root_password }}"
-    login_unix_socket: "{{ mysql_socket }}"
+    login_unix_socket: "{{ mariadb_socket }}"
     name: test
     state: absent
 
