centos mariadb installation working. Needs cluster bootstrap

--- a/playbooks/mariadb_cluster.yml
+++ b/playbooks/mariadb_cluster.yml
@@ -4,10 +4,10 @@
   roles:
   - mariadb_install
 
-- hosts: mariadb_cluster
-  become: yes
-  gather_facts: True
-  roles:
-  - bootstrap_mariadb_galera_cluster
+# - hosts: mariadb_cluster
+#   become: yes
+#   gather_facts: True
+#   roles:
+#   - bootstrap_mariadb_galera_cluster
   
     
