--- a/roles/mariadb_install/tasks/CentOS.yml
+++ b/roles/mariadb_install/tasks/CentOS.yml
@@ -1,10 +1,12 @@
 ---
-- name: Update yum repo and cache on all Debian/Ubuntu boxes
-  yum: update_cache=yes force_yum_get=yes cache_valid_time=3600
+- name: Update yum repo and cache on all Centos boxes
+  yum: update_cache=yes
 
 - name: Upgrade all packages on servers
-  yum: upgrade=dist force_yum_get=yes
-
+  yum:
+    name: '*'
+    state: latest
+    
 - name: Check if a reboot is needed on all servers
   register: reboot_required_file
   stat: path=/var/run/reboot-required get_md5=no
@@ -34,12 +36,7 @@
   package: name="{{ item }}" state=present
   with_items:
     - mariadb-server
-    - mariadb-client
     - galera-4
-
-- name: Install the Python package required for Ansible MySQL
-  pip: "name={{ item }} state=present"
-  with_items:
     - MySQL-python
 
 - debug: msg="trigger mariadb start"
